nav links footer. untested

--- a/views/index.tt
+++ b/views/index.tt
@@ -1,2 +1,2 @@
-<h1><% title %></h1>
+<h1><% title %> - RidePlan</h1>
 This app can be used to create and coordinate cycling rides between groups of people
