--- a/views/dashboard.tt
+++ b/views/dashboard.tt
@@ -1,4 +1,4 @@
-<h1><% title %></h1>
+<h1><% title %> - RidePlan</h1>
 This app can be used to create and coordinate cycling rides between groups of people
 
 <h3>Rides</h3>
