templogin. no passwd. session. untested

--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -3,6 +3,9 @@
 		<title><% title %> - RidePlan</title>
 	</head>
 	<body>
+		<% IF username %>
+		<h3>Username: <% username %></h3>
+		<% END %>
 		<% content %>
 		<% IF footlinks %>
 		<br>
