View riders on indiv rides
Added ability to list who is going on each ride.
Limited to viewing one ride at a time.
No method yet to add/modify people.

--- a/views/viewride.tt
+++ b/views/viewride.tt
@@ -5,4 +5,9 @@
 <li>Start: <% ride.start %></li>
 <li>End: <% ride.end %></li>
 <li>Id: <% ride.id %></li>
+<% IF ride.riderlist %>
+  <% FOREACH rider IN ride.riderlist %>
+    <li> Rider: <% rider.name %></li>
+  <% END %>
+<% END %>
 </ul>
