Add date picker fields
Added date picker fields for new-ride and edit-ride forms.

Seems to work fine on Safari, not sure why w3schools would say
otherwise.

Still have an outstanding bug w/ creating a new ride.

--- a/views/newride.tt
+++ b/views/newride.tt
@@ -9,5 +9,11 @@
 <label for="milestxtbox">Miles</label>
 <input type="text" name="miles" id="milestxtbox" />
 <br>
+<label for="startdatepicker">Start</label>
+<input type="date" name="start" id="startdatepicker" />
+<br>
+<label for="enddatepicker">End</label>
+<input type="date" name="end" id="enddatepicker" />
+<br>
 <input type="submit" />
 </form>
