Add Riders p2. DB methods
Added db function to link riders
hooked up main logic to db functs
untested but compiles

TODO: handle duplicate links

--- a/views/addrider.tt
+++ b/views/addrider.tt
@@ -1,4 +1,4 @@
-<% IF allusers AND rideid %>
+<% IF allusers AND ride.id %>
 
 <form action="/ride/link/rider" method="post">
 <input type="hidden" id="hidRideId" name="rideid" value="<% ride.id %>
