rider linking bug fixes

--- a/views/addrider.tt
+++ b/views/addrider.tt
@@ -1,7 +1,7 @@
 <% IF allusers AND ride.id %>
 
 <form action="/ride/link/rider" method="post">
-<input type="hidden" id="hidRideId" name="rideid" value="<% ride.id %>
+<input type="hidden" id="hidRideId" name="rideid" value="<% ride.id %>" />
 <label for="newrider">Rider</label>
 <select id="newrider" name="riderid">
   <% FOR user IN allusers %>
