Add functionality to remove riders
This functionality does not delete users overall, just unlinks them
from a ride.

Functionality to add/remove riders from a ride is linked to the
view-ride page.

There are a few odd behaviors w/ the lynx browser that could be
hardened, but that can be addressed later. It's minimally functional
as is.

--- a/views/viewride.tt
+++ b/views/viewride.tt
@@ -5,12 +5,8 @@
 <li>Start: <% ride.start %></li>
 <li>End: <% ride.end %></li>
 <li>Id: <% ride.id %></li>
-<% IF ride.riderlist %>
-  <% FOREACH rider IN ride.riderlist %>
-    <li> Rider: <% rider.name %></li>
-  <% END %>
-<% END %>
 </ul>
+<% INCLUDE existingriders.tt %>
 <a href="/ride/edit/<% ride.id %>">Edit</a>
 
 <br>
