--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -1,16 +1,20 @@
 <html>
 	<head>
 		<title><% title %> - RidePlan</title>
+		<link rel="stylesheet" href="<% request.base_uri %>/css/style.css">
 	</head>
 	<body>
 		<% IF username %>
+		<div class="userdisplay">
 		<h3>Username: <% username %></h3>
+		</div>
 		<% END %>
 		<% content %>
+<!-- TODO: issue w/ css on anonymous home page -->
 		<% IF footlinks %>
 		<br>
 		<% FOREACH lnk IN footlinks %>
-		<a href="<% lnk.link %>"><% lnk.name %></a>
+		<a class="footlink" href="<% lnk.link %>"><% lnk.name %></a>
 		<% END %>
 		<% END %>
 	</body>
